--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,7 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css"> 
-    <link rel="shortcut icon" type="image/png" href="favicon-32x32.png"/>
-    <title>{{ page.title }} {{ site.title }}</title>
-  </head>
-  <body>
-    {% include nav.html %}
-    {{ content }}
-    {% include footer.html %}
-  </body>
-</html>
+---
+layout: basic
+---
+<h3>KAPS</h3>
+<h1>Make friends. Advance your career. Belong to community.</h1>
+
+{{ content }}
