--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -11,8 +11,8 @@
 <body>
   <nav>
     <a href="/">Home</a>
-    <a href="/events/">Events</a>
-    <a href="/about/">About</a>
+    <a href="/events">Events</a>
+    <a href="/about">About</a>
   </nav>
   {{ content }}
   <footer>
