--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -13,6 +13,7 @@
     <a href="/">Home</a>
     <a href="/events">Events</a>
     <a href="/about">About</a>
+    <a href="/survey">2022 Member Survey</a>
   </nav>
   {{ content }}
   <footer>
