--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -1,3 +1,5 @@
+---
+---
 <!doctype html>
 <html>
 
@@ -6,6 +8,7 @@
   <link rel="stylesheet" href="/style.css">
   <link rel="shortcut icon" type="image/png" href="/favicon-32x32.png" />
   <title>{{ page.title }} {{ site.title }}</title>
+  <script src="/events.js" defer></script>
 </head>
 
 <body>
