--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -12,16 +12,18 @@
 </head>
 
 <body>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/events">Events</a>
-    <a href="/about">About</a>
-    <a href="/survey">2022 Member Survey</a>
-  </nav>
-  {{ content }}
-  <footer>
-    <p>KAPS loves you 😍 2022</p>
-  </footer>
+  <div class="container-lg px-3 my-5 markdown-body">
+    <nav>
+      <a href="/">Home</a>
+      <a href="/events">Events</a>
+      <a href="/about">About</a>
+      <a href="/survey">2022 Member Survey</a>
+    </nav>
+    {{ content }}
+    <footer>
+      <p>KAPS loves you 😍 2022</p>
+    </footer>
+  </div>
 </body>
 
 </html>
