--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -5,6 +5,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/style.css">
   <link rel="shortcut icon" type="image/png" href="/favicon-32x32.png" />
   <title>{{ page.title }} {{ site.title }}</title>
