--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -15,9 +15,10 @@
 <body>
   <div class="container-lg px-3 my-5 markdown-body">
     <nav>
-      <a href="/">Home</a>
-      <a href="/events">Events</a>
-      <a href="/about">About</a>
+      <a href="/">Home</a> | 
+      <a href="/events">Events</a> | 
+      <a href="/about">About</a> | 
+      <a href="/openings">Role Openings</a> | 
       <a href="/survey">2022 Member Survey</a>
     </nav>
     {{ content }}
