--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container-lg px-3 my-5 markdown-body">
+  <div class="container-lg px-3 my-5">
     <nav>
       <a href="/">Home</a> | 
       <a href="/events">Events</a> | 
