--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/style.css">
   <link rel="shortcut icon" type="image/png" href="/favicon-32x32.png" />
-  <title>{{ page.title }} {{ site.title }}</title>
+  <title>{{ page.title }} | {{ site.title }}</title>
   <script src="/events.js" defer></script>
 </head>
 
