--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -18,7 +18,8 @@
       <a href="/">Home</a> | 
       <a href="/events">Events</a> | 
       <a href="/about">About</a> | 
-      <a href="/volunteer">Committees</a>
+      <a href="/volunteer">Committees</a> |
+      <a href="/sponsorship">Sponsorship</a>
     </nav>
     {{ content }}
     <footer>
