--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -20,7 +20,7 @@
       <a href="/about">About</a> | 
       <a href="/volunteer">Committees</a> |
       <a href="/sponsorship">Sponsorship</a> |
-      <a href="/fun">10 Kappy Hours = Free T-Shirt</a>
+      <a href="/10kappyhours">10 Kappy Hours = Free T-Shirt</a>
     </nav>
     {{ content }}
     <footer>
