--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,6 @@
 layout: basic
 ---
 <h3>KAPS</h3>
-<h1>Make friends. Advance your career. Belong to community.</h1>
+<h1>{{ site.alt-slogan }}</h1>
 
 {{ content }}
