--- a/events.js.liquid
+++ b/events.js.liquid
@@ -19,7 +19,10 @@ appendAllEventLists()
 function appendAllEventLists() {
     const container = document.getElementById('events')
 
-    var events = {{ site.data.events.flagship-events | jsonify }}
+    var events = {{ site.data.events.kappy-hours | jsonify }}
+    container.appendChild(eventsList(events, "KAPPY HOURS"))
+
+    events = {{ site.data.events.small-group-events | jsonify }}
     container.appendChild(eventsList(events, "Flagship events"))
 
     events = {{ site.data.events.small-group-events | jsonify }}
