--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -19,8 +19,7 @@
       <a href="/events">Events</a> | 
       <a href="/about">About</a> | 
       <a href="/volunteer">Committees</a> |
-      <a href="/sponsorship">Sponsorship</a> |
-      <a href="/10kappyhours">10 Kappy Hours = Free T-Shirt</a>
+      <a href="/sponsorship">Sponsorship</a>
     </nav>
     {{ content }}
     <footer>
